--- a/src/main/resources/assets/soundphysics/lang/en_us.json
+++ b/src/main/resources/assets/soundphysics/lang/en_us.json
@@ -37,5 +37,8 @@
   "text.autoconfig.sound_physics.option.Misc.occlusionLogging": "Occlusion logging",
   "text.autoconfig.sound_physics.option.Misc.environmentLogging": "Environment logging",
   "text.autoconfig.sound_physics.option.Misc.performanceLogging": "Performance logging",
+  "text.autoconfig.sound_physics.option.Misc.raytraceParticles": "Raytracing Particles",
+  "text.autoconfig.sound_physics.option.Misc.raytraceParticlesSolid": "No Air Particles",
+
   "text.autoconfig.sound_physics.option.preset": "Preset"
 }
