Update lang for consistency and readability

--- a/src/main/resources/assets/soundphysics/lang/en_us.json
+++ b/src/main/resources/assets/soundphysics/lang/en_us.json
@@ -1,8 +1,8 @@
 {
   "text.autoconfig.sound_physics.title": "Sound Physics Config",
 
-  "text.autoconfig.sound_physics.option.enabled": "Enable rendering?",
-  "text.autoconfig.sound_physics.option.reloadReverb": "!!!Check if changing config!!!",
+  "text.autoconfig.sound_physics.option.enabled": "Enable rendering",
+  "text.autoconfig.sound_physics.option.reloadReverb": "Config has changed",
 
   "text.autoconfig.sound_physics.option.General": "General options:",
   "text.autoconfig.sound_physics.option.Performance": "Performance options:",
@@ -15,7 +15,7 @@
   "text.autoconfig.sound_physics.option.General.globalReverbBrightness": "Reverb brightness",
   "text.autoconfig.sound_physics.option.General.globalBlockAbsorption": "Block passthrough sound absorption",
   "text.autoconfig.sound_physics.option.General.globalBlockReflectance": "Block reflectance multiplier",
-  "text.autoconfig.sound_physics.option.General.soundDistanceAllowance": "Sound packet send radius multiplier",
+  "text.autoconfig.sound_physics.option.General.soundDistanceAllowance": "Sound max distance multiplier",
   "text.autoconfig.sound_physics.option.General.airAbsorption": "Sound absorption by air",
   "text.autoconfig.sound_physics.option.General.underwaterFilter": "Underwater filter strength",
 
@@ -29,7 +29,7 @@
   "text.autoconfig.sound_physics.option.Vlads_Tweaks.leakyBlocksOcclusionMultiplier": "Leaky blocks occlusion multiplier",
   "text.autoconfig.sound_physics.option.Vlads_Tweaks.maxDirectOcclusionFromBlocks": "Maximum direct occlusion",
   "text.autoconfig.sound_physics.option.Vlads_Tweaks._9RayDirectOcclusion": "9 ray direct occlusion calculation",
-  "text.autoconfig.sound_physics.option.Vlads_Tweaks.soundDirectionEvaluation": "Sound direction reevaluation",
+  "text.autoconfig.sound_physics.option.Vlads_Tweaks.soundDirectionEvaluation": "Re-calculate sound direction",
   "text.autoconfig.sound_physics.option.Vlads_Tweaks.maxDirVariance": "Max direction variance",
   "text.autoconfig.sound_physics.option.Vlads_Tweaks.notOccludedNoRedirect": "Skip redirecting directly visible blocks",
 
