--- a/src/main/resources/assets/soundphysics/lang/en_us.json
+++ b/src/main/resources/assets/soundphysics/lang/en_us.json
@@ -39,5 +39,5 @@
   "text.autoconfig.sound_physics.option.Misc.performanceLogging": "Performance logging",
   "text.autoconfig.sound_physics.option.Misc.raytraceParticles": "Raytracing Particles",
 
-  "text.autoconfig.sound_physics.option.preset": "Preset",
+  "text.autoconfig.sound_physics.option.preset": "Preset"
 }
