--- a/src/main/resources/assets/soundphysics/lang/en_us.json
+++ b/src/main/resources/assets/soundphysics/lang/en_us.json
@@ -26,10 +26,10 @@
 
   "text.autoconfig.sound_physics.option.Material_Properties.reflectivityMap": "Edit in config file",
 
-  "text.autoconfig.sound_physics.option.Vlads_Tweaks.leakyBlocksOcclusionMultiplier": "Leaky blocks occlusion multiplier",
   "text.autoconfig.sound_physics.option.Vlads_Tweaks.maxDirectOcclusionFromBlocks": "Maximum direct occlusion",
   "text.autoconfig.sound_physics.option.Vlads_Tweaks._9RayDirectOcclusion": "9 ray direct occlusion calculation",
   "text.autoconfig.sound_physics.option.Vlads_Tweaks.soundDirectionEvaluation": "Re-calculate sound direction",
+  "text.autoconfig.sound_physics.option.Vlads_Tweaks.directRaysDirEvalMultiplier": "Sound reflection bias",
   "text.autoconfig.sound_physics.option.Vlads_Tweaks.maxDirVariance": "Max direction variance",
   "text.autoconfig.sound_physics.option.Vlads_Tweaks.notOccludedNoRedirect": "Skip redirecting directly visible blocks",
 
