--- a/src/main/resources/assets/soundphysics/lang/en_us.json
+++ b/src/main/resources/assets/soundphysics/lang/en_us.json
@@ -2,7 +2,6 @@
   "text.autoconfig.sound_physics.title": "Sound Physics Config",
 
   "text.autoconfig.sound_physics.option.enabled": "Enable rendering",
-  "text.autoconfig.sound_physics.option.reloadReverb": "Config has changed",
 
   "text.autoconfig.sound_physics.option.General": "General options:",
   "text.autoconfig.sound_physics.option.Performance": "Performance options:",
@@ -40,5 +39,12 @@
   "text.autoconfig.sound_physics.option.Misc.performanceLogging": "Performance logging",
   "text.autoconfig.sound_physics.option.Misc.raytraceParticles": "Raytracing Particles",
 
-  "text.autoconfig.sound_physics.option.preset": "Preset"
+  "text.autoconfig.sound_physics.option.preset": "Preset",
+
+
+
+  "text.autoconfig.sound_physics.option.MaterialData": "Material Data",
+  "text.autoconfig.sound_physics.option.MaterialData.reflectivity": "Reflectivity",
+  "text.autoconfig.sound_physics.option.MaterialData.absorption": "Occlusion density",
+  "text.autoconfig.sound_physics.option.MaterialData.example": "Example sound"
 }
