--- a/src/main/resources/assets/soundphysics/lang/en_us.json
+++ b/src/main/resources/assets/soundphysics/lang/en_us.json
@@ -26,7 +26,8 @@
   "text.autoconfig.sound_physics.option.Materials.materialProperties": "Material Properties",
   "text.autoconfig.sound_physics.option.Materials.blockWhiteList": "Block Whitelist",
 
-  "text.autoconfig.sound_physics.option.Vlads_Tweaks.recordsDisable": "Skip Jukebox/Note Block occlusion (Broken)",
+  "text.autoconfig.sound_physics.option.Vlads_Tweaks.recordsDisable": "Skip Jukebox/Note Block occlusion",
+  "text.autoconfig.sound_physics.option.Vlads_Tweaks.continuousRefreshRate": "Continuous sources refresh interval",
   "text.autoconfig.sound_physics.option.Vlads_Tweaks.maxDirectOcclusionFromBlocks": "Maximum direct occlusion",
   "text.autoconfig.sound_physics.option.Vlads_Tweaks._9RayDirectOcclusion": "9 ray direct occlusion calculation",
   "text.autoconfig.sound_physics.option.Vlads_Tweaks.soundDirectionEvaluation": "Re-calculate sound direction",
