Small Rewrite, Absorption upgrades, Fixed problems with water material.
Closes #14

--- a/src/main/resources/assets/soundphysics/lang/en_us.json
+++ b/src/main/resources/assets/soundphysics/lang/en_us.json
@@ -16,6 +16,8 @@
   "text.autoconfig.sound_physics.option.General.globalBlockReflectance": "Block reflectance multiplier",
   "text.autoconfig.sound_physics.option.General.soundDistanceAllowance": "Sound max distance multiplier",
   "text.autoconfig.sound_physics.option.General.airAbsorption": "Sound absorption by air",
+  "text.autoconfig.sound_physics.option.General.humidityAbsorption": "Sound absorption by humidity",
+  "text.autoconfig.sound_physics.option.General.rainAbsorption": "Sound absorption by rain drops",
   "text.autoconfig.sound_physics.option.General.underwaterFilter": "Underwater filter strength",
 
   "text.autoconfig.sound_physics.option.Performance.skipRainOcclusionTracing": "Skip tracing for rain sounds",
